[package]
name = "window_modifier"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = { version = "0.31.0", default-features = false, features = ["wgpu"] }
egui = { version = "0.31.0" }
rfd = { version = "0.15.2", default-features = false }
windows = { version = "0.60.0", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_ProcessStatus"
]}